...
            SliverAppBar(
              expandedHeight: 230,
              pinned: true,
              actions: [
                if (!_admin.isSuperAdmin)
                  IconButton(
                    key: const ValueKey('admin-detail-edit-icon'),
                    onPressed: _isLoading ? null : _editDetails,
                    icon: const Icon(Icons.edit_outlined),
                  ),
                if (!_admin.isSuperAdmin)
                  IconButton(
                    key: const ValueKey('admin-detail-delete-icon'),
                    onPressed: _isLoading ? null : _delete,
                    icon: const Icon(Icons.delete_outline_rounded),
                    color: AppColors.error,
                  ),
              ],
              flexibleSpace: FlexibleSpaceBar(
...
